Align h2 tag used globally for headline. props samuelsidler. Fixes #184.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@97 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/style/wp4.css
+++ b/wordpress.org/public_html/style/wp4.css
@@ -863,7 +863,7 @@ input.text {
 	line-height: 1em;
 	text-shadow: #fff 0px 1px 0px;
 	padding-top: 18px;
-	padding-left: 12px;
+	padding-left: 9px;
 	float: left;
 	text-rendering: optimizeLegibility;
 }
